--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ body {
 .hero .content {
     padding: 1.4rem 7%;
     max-width: 60rem;
+    background-color: rgba(1,1,3, 0.2);
 }
 
 .hero .content h1{
@@ -130,10 +131,10 @@ body {
     line-height: 1.4;
     font-weight: 100;
     text-shadow: 1px 1px 3px rgba(1,1,3, 0.5);
-    mix-blend-mode: difference;
+    /* mix-blend-mode: difference; */
 }
 
-.hero .content .cta {
+/* .hero .content .cta {
     display: inline-block;
     padding: 1rem 3rem;
     font-size: 1.4rem;
@@ -141,7 +142,7 @@ body {
     background-color: var(--primary);
     border-radius: 0.5rem;
     box-shadow: 1px 1px 3px rgba(1,1,3, 0.5);
-}
+} */
 
 /* About Section */
 .about,
@@ -204,7 +205,7 @@ body {
     text-align: center;
     max-width: 30rem;
     margin: auto;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 100;
     line-height: 1.6;
 }
@@ -218,12 +219,12 @@ body {
 
 .menu .row .menu-card {
     text-align: center;
-    padding-bottom: 4rem;
+    padding: 0 1rem 4rem 1rem;
 }
 
 .menu .row .menu-card img{
     border-radius: 50%;
-    width: 80%;
+    width: 300px;
 }
 
 .menu .row .menu-card .menu-card-title{
